edited the css for the main page to fix a bug I found on smaller screen

--- a/client/src/components/AboutUs/style.css
+++ b/client/src/components/AboutUs/style.css
@@ -28,6 +28,21 @@
     border-radius: 3px;
 }
 
+@media (max-width: 1347px) {
+
+    .aboutButton {
+        position: relative;
+        top: -20px;
+        left: -40px;
+        border: solid 3px #e5cdaa;
+        border-radius: 3px;
+        min-width: 150px;
+       
+        
+    }
+   
+}
+
 @media (max-width: 1024px) {
 
     .aboutButton {
